Bug 152751 - Closing LibreOffice generate warnings in console with debug LO
Summary: Closing LibreOffice generate warnings in console with debug LO
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: console-noise Exit
  Show dependency treegraph
 
Reported: 2022-12-31 07:36 UTC by BogdanB
Modified: 2025-10-01 11:36 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description BogdanB 2022-12-31 07:36:33 UTC
Description:
Open a new LibreOffice Writer document. Close LibreOffice (File - Close LibreOffice).

In the terminal, in the dbg version of LibreOffice I get this messages:
warn:vcl.schedule.deinit:332666:332666:vcl/source/app/scheduler.cxx:177: DeInit task: Timer a: 1 p: 1 framework::AutoRecovery m_aTimer 600000ms (0x176cb68)
warn:vcl.schedule.deinit:332666:332666:vcl/source/app/scheduler.cxx:177: DeInit task: Timer a: 1 p: 1 graphic::Manager maSwapOutTimer 10000ms (0x7fc2ed3cece0)
warn:vcl.schedule.deinit:332666:332666:vcl/source/app/scheduler.cxx:198: DeInit active tasks: 2 (ignored: 0)
warn:unotools.config:332666:332666:unotools/source/config/configmgr.cxx:147: ConfigManager not empty

Steps to Reproduce:
see description

Actual Results:
warnings

Expected Results:
no warnings


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 12e8d57e791bb1befc0716d4d02af7d1d1ccb4ae
CPU threads: 4; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 1 stragu 2022-12-31 10:00:57 UTC
Repro, also from Calc:


Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 12e8d57e791bb1befc0716d4d02af7d1d1ccb4ae
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 2 BogdanB 2023-07-31 16:13:18 UTC
warn:legacy.tools:290382:290382:sfx2/source/control/bindings.cxx:1770: No cache for OfficeDispatch!
warn:vcl.schedule.deinit:290382:290382:vcl/source/app/scheduler.cxx:176: DeInit task: Timer a: 1 p: 1 framework::AutoRecovery m_aTimer 600000ms (0x2fb0e80)
warn:vcl.schedule.deinit:290382:290382:vcl/source/app/scheduler.cxx:176: DeInit task: Timer a: 1 p: 1 graphic::Manager maSwapOutTimer 10000ms (0x7fbb5e3215a0)
warn:vcl.schedule.deinit:290382:290382:vcl/source/app/scheduler.cxx:197: DeInit active tasks: 2 (ignored: 0)
warn:unotools.config:290382:290382:unotools/source/config/configmgr.cxx:147: ConfigManager not empty

Still in
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0e17d8ddccdee7d4f46b256153853e1cab87c99e
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 3 BogdanB 2023-09-23 15:23:11 UTC
Justin, if you think this is connected somehow with your changes, or maybe you can look on this, if not, please unCC yourself. Thanks.
Comment 4 BogdanB 2024-06-10 18:15:56 UTC
Retested.

warn:sal.file:202860:202860:sal/osl/unx/file_misc.cxx:659: Invalid file URL
warn:sal.file:202860:202860:sal/osl/unx/file_misc.cxx:659: Invalid file URL
warn:vcl.schedule.deinit:202860:202860:vcl/source/app/scheduler.cxx:176: DeInit task: Timer a: 1 p: 1 framework::AutoRecovery m_aTimer 600000ms (0x2d04500)
warn:vcl.schedule.deinit:202860:202860:vcl/source/app/scheduler.cxx:176: DeInit task: Timer a: 1 p: 1 MemoryManager::MemoryManager maSwapOutTimer 1000ms (0x793879321400)
warn:vcl.schedule.deinit:202860:202860:vcl/source/app/scheduler.cxx:196: DeInit active tasks: 2 (ignored: 0)
warn:unotools.config:202860:202860:unotools/source/config/configmgr.cxx:147: ConfigManager not empty

Version: 24.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 6d39b1a6068bbbd5ca4947f668f989dbfb73342d
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 5 Aron Budea 2024-09-22 05:14:48 UTC
Removing bibisectRequest keyword, as bibisect builds aren't debug builds.
Comment 6 BogdanB 2025-03-28 18:31:25 UTC
warn:sal.file:27962:27962:sal/osl/unx/file_misc.cxx:659: Invalid file URL
warn:sal.file:27962:27962:sal/osl/unx/file_misc.cxx:659: Invalid file URL

Retested with
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 742dbb088b44783c3a4f0fd120b11be3a74fd483
CPU threads: 16; OS: Linux 6.11; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 7 BogdanB 2025-08-16 16:06:19 UTC
Open a new LibreOffice Writer document. Exit LibreOffice (File - Exit LibreOffice).

warn:sal.file:22147:22147:sal/osl/unx/file_misc.cxx:682: Invalid file URL
warn:sal.file:22147:22147:sal/osl/unx/file_misc.cxx:682: Invalid file URL
warn:vcl.schedule.deinit:22147:22147:vcl/source/app/scheduler.cxx:179: DeInit task: Timer a: 1 p: 1 framework::AutoRecovery m_aTimer 600000ms (0x2b2ec170)
warn:vcl.schedule.deinit:22147:22147:vcl/source/app/scheduler.cxx:199: DeInit active tasks: 1 (ignored: 0)
warn:unotools.config:22147:22147:unotools/source/config/configmgr.cxx:147: ConfigManager not empty

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8ffeca7af4302da21d33494342017c3737d540e1
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 8 Commit Notification 2025-09-29 19:07:30 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6e382304e346c99f1424985ae00b5210a1c898b5

tdf#152751: silence autorecovery-provoked 'Invalid file URL'

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Justin L 2025-09-30 22:33:05 UTC
7.6 is before the timeline of my commits (or mk's commits).

This IS bisectable (although not bibisectable). BogdanB is obviously compiling the code, so he could do his own bisect.

(In reply to BogdanB from comment #0)
> DeInit task: framework::AutoRecovery m_aTimer 600000ms
This started with commit 5cb7fed2a5a02ff1cb4551752a0bd8d3001a1f22
Author: Bogdan B on Mon Dec 12 20:31:20 2022 +0000
    tdf#152463 Turn on AutoSave and Backup by default
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144020

> DeInit task: graphic::Manager maSwapOutTimer 10000ms
This was already happening in 7.5.

> warn:unotools.config:332666:332666:unotools/source/config/configmgr.cxx:147:
> ConfigManager not empty
I never see this one. Compiled and tested start and end of 7.6, mid 24.2, and end 24.2.
(using Ubuntu 20.04 to do the compiling. 24.04 needs some backports to compile)
Comment 10 Justin L 2025-09-30 22:36:50 UTC
I assume the autorecovery timer was causing similar output in LO 7.2. Because there is another timer already doing the same thing, I wouldn't worry about not having it shut down more cleanly.

I'll mark it as fixed since I did address one aspect of the report.
Comment 11 Justin L 2025-10-01 11:36:46 UTC
(In reply to Justin L from comment #10)
> I assume the autorecovery timer was causing similar output in LO 7.2.

Yup, at commit 3acc6274be8d1baeb7355b40fe8b7a4c302762df
Author: Christian Lohmaier on Sun Nov 22 15:06:17 2020 +0100
    bump product version to 7.1.0.0.beta1+

warn:vcl.schedule.deinit:568028:568028:vcl/source/app/scheduler.cxx:176: DeInit task: Timer a: 1 p: 1 framework::AutoRecovery m_aTimer 600000ms (0x55f88c943548)
warn:vcl.schedule.deinit:568028:568028:vcl/source/app/scheduler.cxx:176: DeInit task: Timer a: 1 p: 1 graphic::Manager maSwapOutTimer 10000ms (0x7f091fbf5620)
warn:vcl.schedule.deinit:568028:568028:vcl/source/app/scheduler.cxx:196: DeInit active tasks: 2 (ignored: 0)