tdf#152751: silence autorecovery-provoked 'Invalid file URL'

Clearly if no file is specified,
we don't need to attempt to erase 'nothing'.

Change-Id: I6fe1110eeb9ff409037168e4421ef55253ea8766
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191639
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>